; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/isa/extr_mss.c_port_wr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/isa/extr_mss.c_port_wr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.resource*, i32, i32)* @port_wr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @port_wr(%struct.resource* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.resource*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.resource* %0, %struct.resource** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.resource*, %struct.resource** %4, align 8
  %8 = icmp ne %struct.resource* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %3
  %10 = load %struct.resource*, %struct.resource** %4, align 8
  %11 = call i32 @rman_get_bustag(%struct.resource* %10)
  %12 = load %struct.resource*, %struct.resource** %4, align 8
  %13 = call i32 @rman_get_bushandle(%struct.resource* %12)
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @bus_space_write_1(i32 %11, i32 %13, i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %9, %3
  ret void
}

declare dso_local i32 @bus_space_write_1(i32, i32, i32, i32) #1

declare dso_local i32 @rman_get_bustag(%struct.resource*) #1

declare dso_local i32 @rman_get_bushandle(%struct.resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
